--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-simple-maps": "^3.0.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.8",
