feat: add super list

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-table": "^8.16.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "luxon": "^3.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-simple-maps": "^3.0.0",
@@ -26,6 +27,7 @@
     "@tanstack/eslint-plugin-query": "^5.32.1",
     "@tanstack/router-devtools": "^1.31.20",
     "@tanstack/router-vite-plugin": "^1.31.18",
+    "@types/luxon": "^3.6.2",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
